--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "physics-calculator",
   "version": "1.0.0",
   "description": "a website for answering physics questions with formulae",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -22,6 +22,10 @@
   "homepage": "https://github.com/osHamad/physics-calculator#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "ejs": "^3.1.5"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
