--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "homepage": "https://github.com/osHamad/physics-calculator#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.14",
-    "ejs": "^3.1.5"
+    "nodemon": "^2.0.14"
   },
   "engines": {
     "node": "14.x"
